--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,3 +3,8 @@ $desktop-big: 1600px;
 $desktop-middle: 1440px;
 $desktop-small: 1200px;
 $mobile: 320px;
+
+$firstSector_color: #31d500;
+$secondSector_color: #b61616;
+$thirdSector_color: #1540d9;
+$fourthSector_color: #e0bb0f;
